--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".compose.ComposeTweetActivity"/>
         <activity android:name=".timeline.TimelineActivity"/>
+        <activity android:name=".notification.NotificationActivity" />
     </application>
 
 </manifest>
