--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha1'
     implementation 'joda-time:joda-time:2.10'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.github.varunest:sparkbutton:1.0.5'
 }
