--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         <activity android:name=".compose.ComposeTweetActivity"/>
         <activity android:name=".timeline.TimelineActivity"/>
         <activity android:name=".notification.NotificationActivity" />
+        <activity
+            android:name=".profile.ProfileActivity"
+            android:theme="@style/ProfileTheme"
+            android:parentActivityName=".timeline.TimelineActivity"/>
     </application>
 
 </manifest>
