--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ buildscript {
         repositories {
             google()
             jcenter()
+            maven { url "https://jitpack.io" }
         }
     }
 
